[gd_scene load_steps=6 format=2]

[ext_resource path="res://Enemies/arrow/arrow.gd" type="Script" id=1]
[ext_resource path="res://Enemies/arrow/arrow.png" type="Texture" id=2]
[ext_resource path="res://Enemies/arrow/mixkit-arrow-whoosh-1491.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 2 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14, 2 )

[node name="Arrow" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 70
script = ExtResource( 1 )

[node name="CollisionArea" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="arrow" type="Area2D" parent="."]
collision_layer = 0

[node name="Sprite" type="Sprite" parent="arrow"]
texture = ExtResource( 2 )

[node name="DamageArea" type="CollisionShape2D" parent="arrow"]
position = Vector2( -1, 0 )
shape = SubResource( 1 )

[node name="RemoveTimer" type="Timer" parent="."]

[node name="woosh" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
area_mask = 0

[connection signal="body_entered" from="arrow" to="." method="_on_arrow_body_entered"]
[connection signal="timeout" from="RemoveTimer" to="." method="_on_RemoveTimer_timeout"]
